add bootstrap for index, register, send, user pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,6 @@
 <!doctype html>
-<title> Welcome </title>
-<h1> Online Banking </h1>
+{% extends 'base.html' %}
+{% block content %}
+<title> Index </title>
+<h1> Login  </h1>
+{% endblock %}
