--- a/templates/user.html
+++ b/templates/user.html
@@ -1,3 +1,12 @@
 <!doctype html>
 <title> Welcome </title>
+<!doctype html>
+
+{% extends 'base.html' %}
+{% block content %}
+
+<title> User </title>
+<h1> User  </h1>
 <h1> Hi {{name}} </h1>
+
+{% endblock %}
