--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,24 @@
 <!doctype html>
 {% extends 'base.html' %}
 {% block content %}
-<title> Index </title>
-<h1> Login  </h1>
+<div class="column is-4 is-offset-4">
+    <h3 class="title">Login</h3>
+    <div class="box">
+        <form method="POST" action="/">
+            <div class="field">
+                <div class="control">
+                    <input class="input is-large" type="text" name="account_number" placeholder="Your account number" autofocus="">
+                </div>
+            </div>
+
+            <div class="field">
+                <div class="control">
+                    <input class="input is-large" type="password" name="password" placeholder="Your Password">
+                </div>
+            </div>
+
+            <button class="button is-block is-info is-large is-fullwidth">Login</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
