--- a/templates/send.html
+++ b/templates/send.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-{% extends 'base.html' %}
+{% extends 'baseUser.html' %}
 {% block content %}
 <title> Send </title>
 <h1> Send  </h1>
