--- a/templates/user.html
+++ b/templates/user.html
@@ -2,7 +2,7 @@
 <title> Welcome </title>
 <!doctype html>
 
-{% extends 'base.html' %}
+{% extends 'baseUser.html' %}
 {% block content %}
 
 <title> User </title>
