--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-{% extends 'base.html' %}
+{% extends 'baseLogin.html' %}
 {% block content %}
 <div class="column is-4 is-offset-4">
     <h3 class="title">Login</h3>
