--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-{% extends 'base.html' %}
+{% extends 'baseLogin.html' %}
 {% block content %}
 <div class="column is-4 is-offset-4">
     <h3 class="title">Register</h3>
