--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,27 @@
 <!doctype html>
-{% extends 'baseLogin.html' %}
-{% block content %}
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/login.css') }}>    
+</head>
+
 <div class="column is-4 is-offset-4">
-    <h3 class="title">Login</h3>
-    <div class="box">
+    <div>
+        <p class="headline">Please login</p>
+    </div>
+    <div class="box mid">
         <form method="POST" action="/">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="text" name="account_number" placeholder="Your account number" autofocus="">
+                    <p>Account number: </p><input class="input is-large" type="text" name="account_number" placeholder="Your account number" autofocus="">
                 </div>
             </div>
 
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Your Password">
+                    <p>Password: </p><input class="input is-large" type="password" name="password" placeholder="Your Password">
                 </div>
             </div>
 
@@ -21,4 +29,3 @@
         </form>
     </div>
 </div>
-{% endblock %}
