--- a/templates/baseUser.html
+++ b/templates/baseUser.html
@@ -3,7 +3,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    {% comment %} <link rel="stylesheet" type="text/css" href="css/login.css">     {% endcomment %}
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,10 +14,10 @@
         <a class="nav-link" href="/user/john">User</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/send">Send</a>
+        <a class="nav-link" href="/send/0">Send</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/send">Log out</a>
+        <a class="nav-link" href="/logout">Log out</a>
       </li>
       
     </ul>
@@ -27,10 +26,4 @@
 {% block content %}
 
 {% endblock %}
-{% comment %} <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);   position: absolute;
-bottom: 0;
-width: 100%;
-height: 2.5rem; ">
-    © 2021 Copyright 
-  </div> {% endcomment %}
  
