--- a/templates/user.html
+++ b/templates/user.html
@@ -6,7 +6,8 @@
 {% block content %}
 
 <title> User </title>
-<h1> Hi {{id}} </h1>
+<h1> Dear {{name}}, your account id is {{id}} </h1>
+
 <div>
     <h3>Your current banlance is {{balance}}</h3>
 </div>
@@ -30,6 +31,9 @@
             {% endfor %}
         </tbody>
     </table>
+    <script>
+        console.log(sessionStorage.getItem('id'));
+    </script>
     <!-- reference for the for-loop: https://blog.csdn.net/legend818/article/details/103644565 -->
 </div>
 {% endblock %}
