refined the frontend

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,23 +1,16 @@
 <!doctype html>
+<html>
+    <head>
+        <style>
 
-<div class="column is-4 is-offset-4">
-    <h3 class="title">Register</h3>
-    <div class="box">
+        </style>
+    </head>
+    <body>
+        <h3>Register</h3>
         <form method="POST" action="/register">
-
-
-            <div class="field">
-                <div class="control">
-                    <input class="input is-large" type="text" name="name" placeholder="Name" autofocus="">
-                </div>
-            </div>
-
-            <div class="field">
-                <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Password">
-                </div>
-            </div>
-            <button class="button is-block is-info is-large is-fullwidth">Register</button>
+            <input type="text" name="name" placeholder="Name">
+            <input type="password" name="password" placeholder="Password">
+            <button>Register</button>
         </form>
-    </div>
-</div>
+    </body>
+</html>
