--- a/templates/index.html
+++ b/templates/index.html
@@ -1,41 +1,34 @@
-<!doctype html>
-<head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/login.css') }}>
-</head>
-
-<body>    
-    <div>
-        <h3>Bank of Risk. Welcome! Dear customer</h3>
-    </div>
-
-    <div class="column is-4 is-offset-4 mid">
-
-        <h3>Login</h3>
-        <div class="box">
-            <form method="POST" action="/login">
-
-                <div class="field">
-                    <div class="control" >
-                        <p>Account number: </p><input class="input is-large" type="text" name="account_number" placeholder="Your account number" autofocus="" id="id">
-                    </div>
-                </div>
-
-                <div class="field">
-                    <div class="control">
-                        <p>Password: </p><input class="input is-large" type="password" name="password" placeholder="Your Password">
-                    </div>
-                </div>
-
-                <button class="button is-block is-info is-large is-fullwidth">Login</button>
-                <br/>
-                <a href="/register">Register Here</a>
-            </form>
+<!DOCTYPE html>
+<html>
+    <head>
+        <style>
+            div {
+                text-align: center;
+                margin: auto;
+                left: 0;
+                right: 0;
+            }
+        </style>
+    </head>
+    <body>    
+        <div>
+            <h3>Bank of Risk. Welcome! Dear customer</h3>
         </div>
-    </div>
-    
-    <script src="{{url_for('static', filename='js/index.js')}}"></script>
-</body>
+        <div>
+            <div>
+                <form method="POST" action="/login">
+                    <label>Account Number: </label><input type="text" name="account_number" placeholder="Your Account Number" id="id">
+                    <br/>
+                    <br/>
+                    <label>Password: </label><input type="password" name="password" placeholder="Your Password">
+                    <br/>
+                    <br/>
+                    <button>Login</button>
+                    <br/>
+                    <br/>
+                    <button onclick="location.href='/register'" type="button">Register</button>
+                </form>
+            </div>
+        </div>
+    </body>
+</html>
