finished deposit and withdraw feature

--- a/templates/register.html
+++ b/templates/register.html
@@ -10,6 +10,7 @@
         <form method="POST" action="/register">
             <input type="text" name="name" placeholder="Name">
             <input type="password" name="password" placeholder="Password">
+            <input type="text" name="init" placeholder="initial balance">
             <button>Register</button>
         </form>
     </body>
