--- a/templates/index.html
+++ b/templates/index.html
@@ -27,10 +27,19 @@
                     <br/>
                     <br/>
                     <button onclick="location.href='/register'" type="button">Register</button>
+                    
                 </form>
             </div>
             <div class="container" align="left">
-                <a href="/return-files?file=public_info.txt" target="blank"><button class='btn btn-default'>Download!</button></a>
+              
+                <br/>
+                <a href="/link?link=https://github.com/enterwatermode/bank" target="blank"><button class='btn btn-default'>View Source</button></a>
+
+                <br/>
+                <br/>
+                <a href="/return-files?file=public_info.txt" target="blank"><button class='btn btn-default'>Download public info</button></a>
+
+                <br/>
            </div>
         </div>
     </body>
