turned msg into red

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             <h3>Bank of Risk. Welcome! Dear customer</h3>
         </div>
         <div>
-            <p id="msg"></p>
+            <p id="msg" style="color: red"></p>
             <div>
                 <label>Account Number: </label><input id="acc" type="text" name="account_number" placeholder="Your Account Number" id="id">
                 <br/>
