--- a/templates/user.html
+++ b/templates/user.html
@@ -13,7 +13,7 @@
     <body>
         <h1> Welcome {{name}}</h1>
         <div>
-            <p id="msg"></p>
+            <p id="msg" style="color: red"></p>
         </div>
         <div>
             <p>Your account number is <span id="idNum">{{id}}</span></p>
