--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,7 @@
     <body>
         <div>
             <h3>Register</h3>
-            <p id="msg"></p><br>
+            <p id="msg" style="color: red"></p><br>
             <input id="name" type="text" name="name" placeholder="Name"><br><br>
             <input id="password" type="password" name="password" placeholder="Password"><br><br>
             <input id="init" type="text" name="init" placeholder="initial balance"><br><br>
