added amount instruction

--- a/templates/register.html
+++ b/templates/register.html
@@ -16,7 +16,7 @@
             <p id="msg" style="color: red"></p><br>
             <input id="name" type="text" name="name" placeholder="Name"><br><br>
             <input id="password" type="password" name="password" placeholder="Password"><br><br>
-            <input id="init" type="text" name="init" placeholder="initial balance"><br><br>
+            <input id="init" type="text" name="init" placeholder="initial balance：(must be in format like: 100.00)"><br><br>
             <button id="btn">Register</button><br>
         </div>
     </body>
