--- a/templates/user.html
+++ b/templates/user.html
@@ -20,18 +20,18 @@
             <p>Your current balance is <span id="balance">{{balance}}</span></p>
         </div>
         <div>
-            <input id = "amount" type="text" name="amount" placeholder="Amount">
+            <input id = "amount" type="text" name="amount" placeholder="Amount：(must be in format like: 100.00)">
             <input id = "receiver" type="text" name="transfer_to" placeholder="Transfer to">
             <button id="transfer">Transfer</button>
         </div>
         </br>
         <div>
-            <input id = "amountDeposit" type="text" name="amountDeposit" placeholder="Amount">
+            <input id = "amountDeposit" type="text" name="amountDeposit" placeholder="Amount：(must be in format like: 100.00)">
             <button id="deposit">Deposit</button>
         </div>
         </br>
         <div>
-            <input id = "amountWithdraw" type="text" name="amountWithdraw" placeholder="Amount">
+            <input id = "amountWithdraw" type="text" name="amountWithdraw" placeholder="Amount：(must be in format like: 100.00)">
             <button id="withdraw">Withdraw</button>
         </div>
         </br>
